ansible/playbooks/files/k8s-manifests/online-boutique-am/security/1.ingress-from-bigip-only.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-from-bigip-only
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        ipBlocks: ["10.1.20.5"]
