ansible/playbooks/files/k8s-manifests/online-boutique-am/security/2.frontend-from-ingress-only.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-from-ingress-only
  namespace: online-boutique-am
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
    from:
    - podSelector:
        matchLabels:
          istio: ingressgateway
